release: unify compiler architecture for 0.22.0